<resources>
    <string name="app_name">Kryptium</string>
    <string name="action_settings">Settings</string>
    <string name="minimum_password">6</string>

    <string name="instructions">Place your fingertip on the Home button to verify your identity</string>






    <string name="application_name">FingerprintDialog</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="email_password"><![CDATA[Email & Password]]></string>
    <string name="stegimage">stegImage</string>
    <string name="text_block">Text Block</string>
    <string name="pin_code">Pin Code</string>
    <string name="upload">Upload</string>
    <string name="add_text">Add Text</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="my_account">My Account</string>
    <string name="kryptium">KRYPTIUM</string>
    <string name="textListInfo">Add a new text block or select one from the list to decrypt</string>
    <string name="add_a_new_password_or_select_one_from_the_list_to_decrypt">Add a new password or select one from the list to decrypt</string>
    <string name="add_a_new_image_or_select_one_from_the_list_to_decrypt">Add a new image or select one from the list to decrypt</string>
    <string name="add_a_new_file_or_select_one_from_the_list_to_decrypt">Add a new file or select one from the list to decrypt</string>
    <string name="email_password_caps"><![CDATA[EMAIL & PASSWORD]]></string>
</resources>
