<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/add_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorButton" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/stegimage"
                app:srcCompat="@drawable/blank" />

            <EditText
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView3"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textColor="@color/buttonTextColor"
                android:textColorHint="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/textBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textName"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/text_block"
                android:inputType="textMultiLine"
                android:textColor="@color/buttonTextColor"
                android:textColorHint="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/choosePinBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/addButton"
                android:layout_alignParentStart="true"
                android:layout_marginTop="35dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/pin_code"
                android:inputType="numberPassword"
                android:singleLine="true"
                android:textColor="@color/buttonTextColor"
                android:textColorHint="@color/cardview_dark_background" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                android:background="@color/silver"
                android:text="@string/upload"
                android:textColor="@color/colorButton"
                android:textColorLink="@color/colorButton" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>